--- a/.github/workflows/post-to-bsky.yml
+++ b/.github/workflows/post-to-bsky.yml
@@ -7,8 +7,13 @@
 on: workflow_dispatch
 
 jobs:
-  scheduled-job:
-    runs-on: ubuntu-20.04
+  post-to-bsky:
+    runs-on: ubuntu-latest
+    
+    env:
+      BSKY_USER: ${{ secrets.BSKY_USER }}
+      BSKY_PASS: ${{ secrets.BSKY_PASS }}
+
     steps:
     - uses: actions/checkout@v2
 
