--- a/.github/workflows/post-to-bsky.yml
+++ b/.github/workflows/post-to-bsky.yml
@@ -19,8 +19,7 @@ jobs:
 
     - uses: r-lib/actions/setup-r@v2
       with:
-        install-r: false
-        r-version: 4
+        r-version: "renv"
         use-public-rspm: true
 
     - uses: r-lib/actions/setup-renv@v2
