--- a/.github/workflows/post-to-bsky.yml
+++ b/.github/workflows/post-to-bsky.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: r-lib/actions/setup-r@v2
       with:
         r-version: "renv"
+        # install-r: false
         use-public-rspm: true
 
     - uses: r-lib/actions/setup-renv@v2
